fix the controller + tests