@@ -1,37 +1,43 @@
 package org.muki.pets.web;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.gson.Gson;
-import com.sun.tools.javac.util.List;
+
+import java.util.Arrays;
+import java.util.List;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentMatcher;
 import org.muki.pets.model.Pet;
 import org.muki.pets.service.PetService;
 import org.muki.pets.utils.Builder;
+import org.muki.pets.web.config.ObjectMappingConfig;
 import org.muki.pets.web.config.WebConfig;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.http.MediaType;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.web.WebAppConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import org.mockito.ArgumentMatcher;
-import org.springframework.http.MediaType;
 
-import static org.mockito.Mockito.reset;
-import static org.mockito.Mockito.when;
 import static org.mockito.Matchers.argThat;
-
+import static org.mockito.Mockito.reset;
+import static org.mockito.Matchers.eq;
+import static org.mockito.Mockito.when;
 import static org.muki.pets.web.api.EndpointPaths.PETS_URL;
+import static org.muki.pets.web.api.EndpointPaths.PET_URL;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @RunWith(SpringJUnit4ClassRunner.class)
-@SpringBootTest(classes = {PetControllerTestConfig.class})
+@SpringBootTest(classes = {PetControllerTestConfig.class, ObjectMappingConfig.class, WebConfig.class})
 @WebAppConfiguration
 public class PetControllerTest {
 
@@ -45,6 +51,9 @@ public class PetControllerTest {
     private Gson gson;
 
     private MockMvc mockMvc;
+
+    @Autowired
+    private ObjectMapper jacksonMapper;
 
     @Before
     public void setUp() throws Exception {
@@ -63,28 +72,34 @@ public class PetControllerTest {
     public void getPets() throws Exception {
         final String id = "id";
 
-        Pet p1 = new Builder<Pet>() {}
+        Pet p1 = new Builder<Pet>() {
+        }
                 .set("name", "p1")
                 .set("category", "cat")
                 .set("id", id)
                 .build();
 
         when(petService.getAllPets())
-                .thenReturn(List.of(p1));
+                .thenReturn(Arrays.asList(p1));
 
-        mockMvc.perform(get(PETS_URL))
+        MvcResult res = mockMvc.perform(get(PETS_URL))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("id").value(id));
+                .andExpect(jsonPath("$.pets[0].id").value(id))
+                .andReturn();
+        // to verify the response
+//        String content = res.getResponse().getContentAsString();
     }
 
     @Test
     public void createPet() throws Exception {
-        final Pet petRequest = new Builder<Pet>() {}
+        final Pet petRequest = new Builder<Pet>() {
+        }
                 .set("name", "kitty")
                 .set("category", "cat")
                 .build();
 
-        final Pet pet = new Builder<Pet>() {}
+        final Pet pet = new Builder<Pet>() {
+        }
                 .set("id", "666")
                 .set("name", petRequest.getName())
                 .set("category", petRequest.getCategory())
@@ -100,7 +115,6 @@ public class PetControllerTest {
         }))).thenReturn(pet);
 
 
-
         String body = gson.toJson(petRequest);
 
         mockMvc.perform(post(PETS_URL)
@@ -113,7 +127,23 @@ public class PetControllerTest {
 
     @Test
     public void getPet() throws Exception {
+        final String id = "2016";
+        final String name = "zorro";
+        final String category = "dogs";
 
+        final Pet pet = new Builder<Pet>() {
+        }       .set("id", id)
+                .set("name", name)
+                .set("category", category)
+                .build();
+
+        when(petService.getPet(eq(id))).thenReturn(pet);
+
+        mockMvc.perform(get(PET_URL, id)
+                .accept(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("id").value(id))
+                .andExpect(jsonPath("name").value(name))
+                .andExpect(jsonPath("category").value(category));;
     }
 
 }
